--- a/style.css
+++ b/style.css
@@ -10,8 +10,18 @@ body h1{
 }
 
 ul{
+  border: dotted;
+  border-width: thick;
+  border-color: black;
   list-style: none;
-  font-size: 1.1em;
+  font-size: 1.4em;
+  text-align: left;
+  margin-left: 20%;
+  margin-top: 5%;
+  margin-right: 5%;
+}
+ul,li{
+  padding: 5px,5px;
 }
 
 body .notes{
@@ -23,5 +33,5 @@ body .notes{
 
 #setBracket{
   display: inline;
-  font-size: 3em;
+  font-size: 2.5em;
 }
